--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
-<script>
+<script type="text/javascript" src="main.js">
 </script>
-
 <style>
   html, body {
     margin: 0;
