--- a/10-Hold_Shift_and_Check/index-START.html
+++ b/10-Hold_Shift_and_Check/index-START.html
@@ -53,7 +53,8 @@
    <!--
    The following is a common layout you would see in an email client.
 
-   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
+   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down/up,
+   all the checkboxes in-between those two checkboxes should be checked.
 
   -->
   <div class="inbox">
@@ -95,7 +96,6 @@
     </div>
   </div>
 
-<script>
-</script>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
