--- a/26_Stripe_Follow_Along_Nav/index-START.html
+++ b/26_Stripe_Follow_Along_Nav/index-START.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <h2>Cool</h2>
-  <nav class="top">
+
+
+  <nav class="nav-bar">
     <div class="dropdownBackground">
       <span class="arrow"></span>
     </div>
@@ -79,11 +81,11 @@
     box-sizing: border-box;
     font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
   }
-  
+
   *, *:before, *:after {
     box-sizing: inherit;
   }
-  
+
   body {
     margin: 0;
     min-height: 100vh;
@@ -149,7 +151,7 @@
   .trigger-enter-active .dropdown {
     opacity: 1;
   }
-  
+
   .dropdownBackground {
     width: 100px;
     height: 100px;
@@ -219,8 +221,7 @@
   .button[href*=courses] { background: #ffc600; }
 </style>
 
-<script>
-</script>
+<script src="main.js"></script>
 
 </body>
 </html>
