--- a/30_Whack_A_Mole/index-START.html
+++ b/30_Whack_A_Mole/index-START.html
@@ -32,11 +32,8 @@
     </div>
   </div>
 
-<script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+  <p class="timer"></p>
 
-</script>
+<script src="main.js"></script>
 </body>
 </html>
